# Ontology

./: .env.example  .gitignore  README.md  pyproject.toml  set.env
data/: ontology.yaml  ontology_memori.db
data/ontologies/: README.md  method1_keyword_grounding.yaml  method2_ontology_prompting.yaml  method3_og_rag.yaml  method4_kg_reasoning_agent.yaml  method5_ontology_enhanced_embedding.yaml  method6_neuro_symbolic_hybrid.yaml  method7_reverse_constraint_reasoning.yaml  method8_llm_to_ontology.yaml  milk_retail_blueprint.yaml
docs/: app-flow.md  how-ontology-feeds-llm.md  reference.md
docs/flow_chart/: flowchart LR.mmd
docs/history/: README.md
docs/history/2026-02-07/: change-log.md  decisions.md  plans.md  session.md
docs/reference/: experiment-method-libraries.md  how-banana-flavor-matches-ontology.md  method-ontology-characteristics.md  method-ontology-map.md  method-run-examples.md  ontology-blueprint-milk-retail.md  ontology-llm-integration-summary.md  reference.md  tools-module-map.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
scripts/: setup_method_examples.sh
src/ontology_llm/: api.py  app.py  dashboard_service.py
src/ontology_llm/exp/: __init__.py  base.py  controller.py  method1_keyword_grounding.py  method2_ontology_prompting.py  method3_og_rag.py  method4_kg_reasoning_agent.py  method5_ontology_enhanced_embedding.py  method6_neuro_symbolic_hybrid.py  method7_reverse_constraint_reasoning.py  method8_llm_to_ontology.py
src/ontology_llm/tools/: __init__.py  llm_tools.py  method_tools.py  prompt_tools.py  sql_tools.py
test/: Ontology_token_exceed.md
